--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 Django==2.2.*
-Pillow==7.1.*
+Pillow==7.2.*
 django-debug-toolbar==2.2.*
-django-extensions==2.2.*
-django-import-export==2.1.*
+django-extensions==3.0.*
+django-import-export==2.3.*
+django-tinymce==3.0.*
 lxml==4.5.*
 selenium==3.141.*
-# See your own Chrome version
-# and https://pypi.org/project/chromedriver-binary/#history
+# See your own Chrome version and https://pypi.org/project/chromedriver-binary/#history
 chromedriver-binary==84.*
